@startuml Bibiblioteca
Revista --|> Documento
Libro --|> Documento
Documento "1" --o "0...*"Biblioteca : Contiene
Estudiante "1"--o "0...*"Biblioteca : Acuden
Prestamo "1"--o "0...*"Biblioteca : Realiza
title
Diagrama de Clases Biblioteca
end title



class Biblioteca{
/' 
    // Esto es un comentario de bloque
    // proximos codigos
'/
    + Arraylist documentos
    + Arraylist revistas
    + Arraylist libros
    + Arraylist estudiantes
    + Arraylist prestamos
    ---
    + main()
    + registro()
    + generarTablaEstudiantes()
    + generarTablaLibros()
    + generarTablaRevistas()
    + generarTablaPrestamos()
    + editarLibro()
    + editarRevista()
    + eliminarLibro()
    + eliminarRevista()
    + devoluciones()
    + deudores()
    + prestarLibro()
    + prestarRevista()
    + crearPrestamo()
    + obtenerFechaActual()
    + calcularFechaVencimiento()
/'
    //proximos metodos
'/
}

class Documento{
    'Atributos
    + String titulo 
    + String autores
    + int id 
    + GregorianCalendar anioPublicacion
    + boolean disponible
    'Metodos
    + Documento()
    + Documento(String titulo, String autores, int id, GregorianCalendar anioPublicacion, boolean disponible)
    + getTitulo()
    + setTitulo(String titulo)
    + getAutor()
    + setAutor(String autor)
    + getID()
    + setID()
    + getAnioPublicacion()
    + setAnioPublicacion(gregorianCalendar anioPublicacion)
    + getDisponible()
    + setDisponible(boolean disponible)
    + getIds()
    + setIds(Set<String> ids)
    + toString()
}   

class Revista{
    'Atributos
    + String ISSN
    + String nombre
    + int Volumen
    'Metodos
    + Revista()
    + Revista(String Titulo , String Autor, int id, GregorianCalendar anioPublicacion, boolean disponible, String ISSN, String nombre, int Volumen)
    + prestamo()
    + getISSN()
    + setISSN(String ISSN)
    + getNombre()
    + setNombre(String nombre)
    + getVolumen()
    + setVolumen(int Volumen)
    + toString()
    
}

class Libro{
    'Atributos
    + String ISBN
    + String editorial
    + String edicion
    'Metodos
    + Libro()
    + Libro(String Titulo , String Autor, int id, GregorianCalendar anioPublicacion, boolean disponible, String ISBN, String editorial, String edicion)
    + getISBN()
    + setISBN(String ISBN)
    + getEditorial()
    + setEditorial(String editorial)
    + getEdicion()
    + setEdicion(int edicion)
    + toString()
}
class Estudiante{
    'Atributos
    + String nombre
    + String apellido
    + String carrera 
    + String numeroControl
    + boolean deudor()
    'Metodos
    + Estudiante()
    + Estudiante(String nombre, String apellido, String carrera, String numeroControl)
    + getNombre()
    + setNombre(String nombre)
    + getApellido()
    + setApellido(String apellido)
    + getCarrera()
    + setCarrera(String carrera)
    + getNumeroControl()
    + setNumeroControl(String numeroControl)
    + isDeudor()
    + setDeudor(boolean deudor)
    + toString()
}

class Prestamo{
    'Atributos
    + String id
    + String numeroControl
    + String idDocumento()
    + GregorianCalendar fechaPrestamo
    + GregorianCalendar fechaVencimiento
    + boolean conAtraso
    'Metodos
    + Prestamo()
    + Prestamo(String id, String numeroControl, String idDocumento, GregorianCalendar fechaPrestamo, GregorianCalendar fechaVencimiento, boolean conAtraso)
    + getId()
    + setId(String id)
    + getNumeroControl()
    + setNumeroControl(String numeroControl)
    + getIdDocumento()
    + setIdDocumento(String idDocumento)
    + getFechaPrestamo()
    + setFechaPrestamo(GregorianCalendar fechaPrestamo)
    + getFechaVencimiento()
    + setFechaVencimiento(GregorianCalendar fechaVencimiento)
    + isConAtraso()
    + setConAtraso(boolean conAtraso)
    + toString()    
}

@enduml